WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269251
REGRESSION (
274086@main
?): ASSERTION FAILED: lock.isHeld() in animationsWereRemovedFromNode() on http/tests/site-isolation/iframe-process-termination-after-navigation-completed.html
https://bugs.webkit.org/show_bug.cgi?id=269251
Summary
REGRESSION (274086@main?): ASSERTION FAILED: lock.isHeld() in animationsWereR...
Marta Darbinyan
Reported
2024-02-12 16:32:10 PST
Description: http/tests/site-isolation/iframe-process-termination-after-navigation-completed.html Is a flaky crash on macOS Debug starting from
274086@main
. This issue can be reproduced by using the command: run-webkit-tests --root --debug --iterations=1 http/tests/site-isolation/iframe-process-termination-after-navigation-completed.html History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsite-isolation%2Fiframe-process-termination-after-navigation-completed.html&style=debug
Crash Log: ASSERTION FAILED: lock.isHeld() /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/Lock.h(146) : void WTF::assertIsHeld(const Lock &) 1 0x116d1c949 WTFCrash 2 0x157d864cb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x158fdef33 WTF::assertIsHeld(WTF::Lock const&) 4 0x15a020c40 WebKit::RemoteLayerTreeEventDispatcher::animationsWereRemovedFromNode(WebKit::RemoteLayerTreeNode&) 5 0x15982219c WebKit::RemoteScrollingCoordinatorProxyMac::animationsWereRemovedFromNode(WebKit::RemoteLayerTreeNode&) 6 0x1597f4419 WebKit::RemoteLayerTreeDrawingAreaProxy::animationsWereRemovedFromNode(WebKit::RemoteLayerTreeNode&) 7 0x1597f66a5 WebKit::RemoteLayerTreeHost::animationsWereRemovedFromNode(WebKit::RemoteLayerTreeNode&) 8 0x1597f5cee WebKit::RemoteLayerTreeHost::layerWillBeRemoved(WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PlatformLayerIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>) 9 0x1597ee3ba WebKit::RemoteLayerTreeHost::remotePageProcessCrashed(WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 10 0x1597ee1d5 WebKit::RemoteLayerTreeDrawingAreaProxy::remotePageProcessCrashed(WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 11 0x159a59636 WebKit::RemotePageProxy::processDidTerminate(WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 12 0x159cadf2e WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch(WebKit::ProcessTerminationReason) 13 0x159cad8a5 WebKit::WebProcessProxy::didClose(IPC::Connection&) 14 0x15b234540 IPC::Connection::dispatchDidCloseAndInvalidate()::$_12::operator()() const 15 0x15b234479 WTF::Detail::CallableWrapper<IPC::Connection::dispatchDidCloseAndInvalidate()::$_12, void>::call() 16 0x116d48e92 WTF::Function<void ()>::operator()() const 17 0x116dea39e WTF::RunLoop::performWork() 18 0x116dee37e WTF::RunLoop::performWork(void*) 19 0x7ff80c23bff7 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 20 0x7ff80c23bf99 __CFRunLoopDoSource0 21 0x7ff80c23bd64 __CFRunLoopDoSources0 22 0x7ff80c23a9e1 __CFRunLoopRun 23 0x7ff80c23a082 CFRunLoopRunSpecific 24 0x7ff80d1d5411 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x103c2719a WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 26 0x103bdbd5f WTR::TestController::runUntil(bool&, WTF::Seconds) 27 0x103c401d5 WTR::TestInvocation::invoke() 28 0x103be4d77 WTR::TestController::runTest(char const*) 29 0x103be52a6 WTR::TestController::runTestingServerLoop() 30 0x103bdc847 WTR::TestController::run() 31 0x103bdc12c WTR::TestController::TestController(int, char const**) Link:
https://build.webkit.org/results/Apple-Sonoma-Debug-WK2-Tests/274457@main%20(918)/http/tests/site-isolation/iframe-process-termination-after-navigation-completed-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-12 16:32:42 PST
<
rdar://problem/122838302
>
EWS
Comment 2
2024-02-12 17:16:24 PST
Test gardening commit
274510@main
(d8793d4f89e5): <
https://commits.webkit.org/274510@main
> Reviewed commits have been landed. Closing PR #24303 and removing active labels.
Antoine Quint
Comment 3
2024-02-16 06:46:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24613
EWS
Comment 4
2024-02-16 14:18:29 PST
Committed
274882@main
(74c0aa4209e1): <
https://commits.webkit.org/274882@main
> Reviewed commits have been landed. Closing PR #24613 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug