REGRESSION (274086@main?): ASSERTION FAILED: lock.isHeld() in animationsWereRemovedFromNode() on http/tests/site-isolation/iframe-process-termination-after-navigation-completed.html https://bugs.webkit.org/show_bug.cgi?id=269251 rdar://122838302

Reviewed by Cameron McCormack.

For atomicity, the transaction handling code was made to take the lock for the whole transaction
in `RemoteScrollingCoordinatorProxyMac::willCommitLayerAndScrollingTrees()` in 273391@main. Since
`RemoteLayerTreeHost::remotePageProcessCrashed()` is a pseudo-transaction, it should also take
the lock.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::remotePageProcessCrashed):

Canonical link: https://commits.webkit.org/274882@main